--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             '5 - Redes Abundantes (Front).png',
             '6 - Economia de servicios (Front).png', 
             '7 - Impulso Industrial (Front).png',
-            '8 - Unnamed (Front).png',
+            '8 - Produccion Primaria (Front).png',
             '9 - Infraestructura Moderna (Front).png',
             '10 - Vivienda Temporal (Front).png',
             '11 - Campaña de Sanidad (Front).png',
@@ -281,7 +281,7 @@
             // TURNO 4 en adelante (Probabilidad 80/20)
             const probabilidad = Math.random(); 
 
-            if (probabilidad < 0.54) { 
+            if (probabilidad < 0.51) { 
                 return 'BUENO';
             } else { 
                 return 'MALO';
@@ -370,3 +370,4 @@
 </body>
 
 </html>
+
